--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@ p {
 }
 </style>
 </head>
+
 <body>
 
   <!-- Display the countdown timer in an element -->
   <p id="demo"></p>
-
+  <audio controls loop autoplay>
+  <source src="https://raw.githubusercontent.com/HopkinsTimer/HopkinsTimer.github.io/master/Undertale.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   <script>
   // Set the date we're counting down to
   var countDownDate = new Date("May 31, 2024 12:35:00").getTime();
