--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ p {
 
   <!-- Display the countdown timer in an element -->
   <p id="demo"></p>
-  <audio controls loop autoplay>
+  <audio controls autoplay>
   <source src="https://raw.githubusercontent.com/HopkinsTimer/HopkinsTimer.github.io/master/Undertale.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
