--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p {
   <!-- Display the countdown timer in an element -->
   <p id="demo"></p>
   <audio controls autoplay>
-  <source src="./Undertale.mp3" type="audio/mpeg">
+  <source src="../Undertale.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
   <script>
