--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
-    Tiem Unteal
+    Hopkins TImer
   </title>
+
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/HopkinsTimer/HopkinsTimer.github.io/main/hopkins-150x151.png">
 <p>
 </p>
 <style>
