--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
-    Hopkins TImer
+    Hopkins Timer
   </title>
 
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/HopkinsTimer/HopkinsTimer.github.io/main/hopkins-150x151.png">
@@ -90,6 +90,11 @@ Your browser does not support the audio element.
         var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
         var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
         var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+        if (seconds == 0) {
+              var msg = new SpeechSynthesisUtterance();
+              msg.text = days + "days" + hours + "hours" + minutes + "minutes" + seconds + "seconds" + ms + "milliseconds";
+              window.speechSynthesis.speak(msg);
+        }
         // Display the result in the element with id="demo"
         document.getElementById("demo").innerHTML = days + "d " + hours + "h "
         + minutes + "m " + seconds + "s ";
