Changed audio to ogg

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ p {
   <!-- Display the countdown timer in an element -->
   <p id="demo"></p>
 <audio autoplay loop>
-  <source src="https://github.com/HopkinsTimer/HopkinsTimer.github.io/blob/main/undertale.mp3?raw=true" type="audio/mpeg">
+  <source src="https://github.com/HopkinsTimer/HopkinsTimer.github.io/blob/main/undertale.ogg?raw=true" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
   <script>
