--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Your browser does not support the audio element.
       + minutes + "m " + seconds + "s ";
     }
 
-    else if (currentDate.getTime() < wed_thurs.getTime()) {
+    else if (currentDate.getTime() < thurs_fri_2.getTime()) {
       var days = 0
       var hours = 4
       var minutes = 20
